[tool.poetry]
name = "daikanban"
# poetry-version-plugin will set this to correct value
version = "0"
description = "A kanban-style project task queue."
authors = ["Jeremy Silver <jeremys@nessiness.com>"]
readme = "README.md"

[tool.setuptools.dynamic]
version = {attr = "daikanban.__version__"}

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.3"
typer = {extras = ["all"], version = "^0.9.0"}
bullet = "^2.2.0"
pytimeparse = "^1.1.8"
pendulum = "^3.0.0"
typing-extensions = "^4.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
tag_format = "v$major.$minor.$patch"
version_files = [
  "pyproject.toml:tool.poetry.version"
]

[tool.coverage.run]
omit = ["venv/*"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
addopts = "--verbose --cov=daikanban"
