[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daikanban"
dynamic = ["version"]
description = "A kanban-style project task queue."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["kanban", "productivity"]
authors = [
  { name = "Jeremy Silver", email = "jeremys@nessiness.com" }
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "fancy_dataclass >= 0.7.1",
  "pendulum >= 3.0",
  "pydantic >= 2.6",
  "pytimeparse >= 1.1",
  "typer >= 0.9",
  "typing-extensions >= 4.10"
]

[project.scripts]
daikanban = "daikanban.cli.main:run_app"

[project.urls]
Documentation = "https://github.com/jeremander/daikanban#readme"
Issues = "https://github.com/jeremander/daikanban/issues"
Source = "https://github.com/jeremander/daikanban"

[tool.hatch.build.targets.sdist]
exclude = ["TODO.md"]

[tool.hatch.version]
path = "daikanban/__init__.py"

[tool.hatch.envs.lint]
dependencies = [
  "mypy>=1.11",
  "py-gadzooks>=0.2.9",
  "ruff>=0.6",
  "vermin>=1.6",
]

[tool.hatch.envs.lint.scripts]
# linting
run-ruff = "ruff check"
# ensure compatibility with Py3.10 and higher
run-vermin = "vermin {args:.}"
# type-checking
run-mypy = "mypy --install-types --non-interactive {args:daikanban tests}"
# print info about lines of code
run-loc-summarize = "gadzooks loc-summarize daikanban"
all = ["run-ruff", "run-vermin", "run-mypy", "run-loc-summarize"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

# [[tool.hatch.envs.all.matrix]]
# python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:daikanban tests}"

[tool.hatch.publish.index]
disable = true

[tool.coverage.run]
source_pkgs = ["daikanban", "tests"]
branch = true
parallel = true
omit = ["venv/*"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.commitizen]
tag_format = "v$major.$minor.$patch"

[tool.pytest.ini_options]
addopts = "--verbose --cov=daikanban"
